<resources>
    <string name="app_name">FastIt - Intermittent Fasting</string>

    <string name="text_fasting">Fasting</string>
    <string name="text_plan">Plan</string>
    <string name="text_leaderboard">LeaderBoard</string>
    <string name="text_user_profile">User Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment_1">Hello blank fragment Leaderboard</string>
    <string name="hello_blank_fragment_2">Hello blank fragment User Profile</string>
    <string name="plan_placeholder">12 hour fasting cycle</string>
    <string name="current_weight_placeholder">Current Weight</string>
    <string name="start_fasting">Start Fasting</string>
    <string name="end_fasting">End Fasting</string>
    <string name="enter_weight">Enter Weight</string>
    <string name="facebook_app_id">286132033095762</string>
    <string name="fb_login_protocol_scheme">fb286132033095762</string>
    <string name="take_picture">Take Picture</string>
    <string name="your_picture"><u>Your Picture</u></string>
    <string name="weight"><u>Weight</u></string>
    <string name="save_session">SAVE SESSION</string>
    <string name="delete_session">DELETE SESSION</string>
    <string name="start_text">Start Time:</string>
    <string name="end_text">End Time:</string>
    <string name="session_completed">Session Completed?</string>
    <string name="weight_text">Weight:</string>
    <string name="water_info_1"><font size="18"><b>Why drink water during fasting?</b></font><font size="15">\n\nYour body consists of about 60% water.
    You hydrate the most from water-dense foods like fruits and vegetables when you eat.
    \n\nSo you are easy to be dehydrated during fasting. Because there may be a full day between meals,
        it\'s critical to drink water in the fasting period.</font></string>
    <string name="water_info_2"><font size="18"><b>How to know if I drink enough water?</b></font><font size="15">\n\nThe easiest way to
        estimate how well hydrated you are is to look at your urine.
        \n\nIt should be fairly clear. If it\'s dark yellow, that\'s a sign you may need to drink more water.</font></string>
    <string name="fasting_info"><center><font size="18"><b>During Fasting</b></font></center><font size="15">\n\n• Drink water or herbal tea to stay hydrated.
        \n\n• Keep your mind off food.\n\n• Avoid high-intensity workouts.</font></string>
    <string name="txtDisplayFriends">Login with Facebook to view friends score!</string>
    <string name="txt_userName">My Name</string>
</resources>