<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_fasting"
        android:enabled="true"
        android:icon="@drawable/ic_fasting"
        android:title="@string/text_fasting"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_plan"
        android:enabled="true"
        android:icon="@drawable/ic_plan"
        android:title="@string/text_plan"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_leaderboard"
        android:enabled="true"
        android:icon="@drawable/ic_leaderboard"
        android:title="@string/text_leaderboard"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_user_profile"
        android:enabled="true"
        android:icon="@drawable/ic_user"
        android:title="@string/text_user_profile"
        app:showAsAction="ifRoom" />

</menu>