<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/history_cardView"
        android:layout_width="match_parent"
        android:layout_height="235dp"
        android:layout_margin="10dp"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/start_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:text="@string/start_text"
        android:gravity="start"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/start_time"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/end_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/end_text"
        android:gravity="start"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/end_time"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:gravity="end"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/completed_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:text="@string/session_completed"
        android:gravity="start"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/completed_status"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="70dp"
        android:gravity="end"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/weight_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:text="@string/weight_text"
        android:gravity="start"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/weight_value"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="100dp"
        android:gravity="end"
        android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="130dp"
            android:text="Picture (Click to enlarge): "
            android:gravity="start"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark" />

    <ImageView
        android:id="@+id/session_thumbnail"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="160dp"
        android:layout_marginBottom="10dp"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/com_facebook_profile_picture_blank_portrait" />

    </androidx.cardview.widget.CardView>

</LinearLayout>